--- a/kubernetes-security/task01/02-crb-bob.yaml
+++ b/kubernetes-security/task01/02-crb-bob.yaml
@@ -3,9 +3,9 @@ kind: ClusterRoleBinding
 metadata:
   name: admin-bob
 subjects:
-- kind: User
+- kind: ServiceAccount
   name: bob 
-  apiGroup: rbac.authorization.k8s.io
+  namespace: "default"
 roleRef:
   kind: ClusterRole
   name: admin
